--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-ai/generativelanguage": "^0.2.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -18,12 +19,14 @@
     "cohere-ai": "^6.2.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "google-auth-library": "^8.8.0",
     "next": "13.4.4",
     "openai": "^3.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.2",
+    "retry-request": "^5.0.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "uuid": "^9.0.0"
