change env example

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ CHROMA_SERVER_HOST=
 CHROMA_SERVER_HTTP_PORT=
 COHERE_API_KEY=
 PALM_API_KEY=
-# set prod to TRUE to prevent collection uploads
+# set prod to true to prevent collection uploads
 PROD=
