--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.14",
     "chromadb": "^1.5.0",
     "cohere-ai": "^6.2.1",
+    "daisyui": "^3.0.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "google-auth-library": "^8.8.0",
