--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@types/uuid": "^9.0.1",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
-    "chromadb": "^1.5.0",
-    "cohere-ai": "^6.2.1",
+    "chromadb": "^1.5.2",
+    "cohere-ai": "^5.1.0",
     "daisyui": "^3.0.3",
+    "encoding": "^0.1.13",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "google-auth-library": "^8.8.0",
+    "langchain": "^0.0.92",
     "next": "13.4.4",
     "openai": "^3.2.1",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^3.7.107",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
